# agadoEngine

./: .gitignore  BuildAndRun.bat  CMakeLists.txt  README.md
Editor/: CMakeLists.txt  agadoEditor.cpp
Engine/: CMakeLists.txt  DLLEntryMain.cpp  agaEngine.Build.cs  agadoEngine.cpp  agadoEngine.h
Engine/Common/: CommonHeaders.h  EnginePCH.cpp  EnginePCH.h
Engine/Core/: Singleton.h
Engine/Core/Log/: Logger.cpp  Logger.h
